@@ -12,3 +12,5 @@ FORMS	= mainwindow.ui prefdialog.ui importdialog.ui importprogress.ui
 IMAGES	= images/fileopen images/info images/qjadeo
 
 QMAKE_CXXFLAGS_WARN_ON += -Wno-non-virtual-dtor
+
+TRANSLATIONS = qjadeo_fr.ts 
